# game-of-life

./: README.md  pyproject.toml
game_of_life/: main.py
